Fixed the issue with the about img going over the navbar. It was the z-index

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -58,8 +58,8 @@
 
     .hexagon-container {
       position: relative;
-      width: 250px; 
-      height: 250px; 
+      width: 225px; 
+      height: 225px; 
       margin: 0 auto;
       display: flex;
       justify-content: center;
@@ -97,5 +97,6 @@
       );
       object-fit: cover;
       position: absolute;
+      z-index: 1;
     }
     
